package com.goody.nus.se.gomoku.user.service.interfaces;

import com.goody.nus.se.gomoku.user.model.dto.UserDTO;
import java.util.List;

/**
 * Service interface for User
 * Generated by MyBatis Generator Service Plugin
 */
public interface IUserService {
    /**
     * Save a single entity
     *
     * @param dto the DTO object to save
     * @return primary key id of saved entity, null if failed
     */
    Long save(UserDTO dto);

    /**
     * Batch save entities
     *
     * @param dtoList list of DTO objects to save
     * @return number of affected rows
     */
    int saveBatch(List<UserDTO> dtoList);

    /**
     * Update entity by primary key
     *
     * @param dto the DTO object to update, must contain primary key
     * @return number of affected rows, 1 for success, 0 for failure
     */
    int update(UserDTO dto);

    /**
     * Delete entity by primary key
     *
     * @param id User ID
     * @return number of affected rows, 1 for success, 0 for failure
     */
    int deleteById(Long id);

    /**
     * Find entity by primary key
     *
     * @param id User ID
     * @return DTO object, null if not found
     */
    UserDTO findById(Long id);

    /**
     * Find all entities
     *
     * @return list of DTO objects
     */
    List<UserDTO> findAll();

    /**
     * Find user by email
     *
     * @param email email address
     * @return UserDTO object, null if not found
     */
    UserDTO findByEmail(String email);

    /**
     * Find user by nickname
     *
     * @param nickname user nickname
     * @return UserDTO object, null if not found
     */
    UserDTO findByNickname(String nickname);

    /**
     * Check if email already exists
     *
     * @param email email address
     * @return true if exists, false otherwise
     */
    boolean existsByEmail(String email);

    /**
     * Check if nickname already exists
     *
     * @param nickname user nickname
     * @return true if exists, false otherwise
     */
    boolean existsByNickname(String nickname);
}
