package com.goody.nus.se.gomoku.user.service.interfaces;

import com.goody.nus.se.gomoku.user.model.dto.UserTokenDTO;

import java.util.List;

/**
 * Service interface for UserToken
 * Generated by MyBatis Generator Service Plugin
 */
public interface IUserTokenService {
    /**
     * Save a single entity
     *
     * @param dto the DTO object to save
     * @return primary key id of saved entity, null if failed
     */
    Long save(UserTokenDTO dto);

    /**
     * Batch save entities
     *
     * @param dtoList list of DTO objects to save
     * @return number of affected rows
     */
    int saveBatch(List<UserTokenDTO> dtoList);

    /**
     * Update entity by primary key
     *
     * @param dto the DTO object to update, must contain primary key
     * @return number of affected rows, 1 for success, 0 for failure
     */
    int update(UserTokenDTO dto);

    /**
     * Delete entity by primary key
     *
     * @param id Primary Key
     * @return number of affected rows, 1 for success, 0 for failure
     */
    int deleteById(Long id);

    /**
     * Find entity by primary key
     *
     * @param id Primary Key
     * @return DTO object, null if not found
     */
    UserTokenDTO findById(Long id);

    /**
     * Find all entities
     *
     * @return list of DTO objects
     */
    List<UserTokenDTO> findAll();

    /**
     * Find token by user ID
     *
     * @param userId User ID
     * @return UserTokenDTO object, null if not found
     */
    UserTokenDTO findByUserId(Long userId);

    /**
     * Find token by refresh token
     *
     * @param refreshToken Refresh Token
     * @return UserTokenDTO object, null if not found
     */
    UserTokenDTO findByRefreshToken(String refreshToken);

    /**
     * Delete token by user ID
     *
     * @param userId User ID
     * @return number of affected rows
     */
    int deleteByUserId(Long userId);

    /**
     * Create or update user token (upsert)
     * If user already has a token, update it; otherwise, create new one
     *
     * @param dto the DTO object
     * @return number of affected rows
     */
    int saveOrUpdate(UserTokenDTO dto);
}
